@@ -4,13 +4,11 @@ import edu.io.interfaces.Repairable;
 import edu.io.interfaces.Tool;
 import edu.io.token.*;
 
-import java.util.Stack;
 
 public class Player {
     private PlayerToken token;
-    private boolean hasPickaxe;
-    public final Gold gold = new Gold();
-    public Shed shed = new Shed();
+    public Gold gold = new Gold();
+    private Shed shed = new Shed();
 
     public PlayerToken token() {
         return token;
@@ -21,62 +19,29 @@ public class Player {
     }
 
     public void interactWithToken(Token token) {
-        switch (token) {
-            //błąd (use --enable-preview to enable patterns in switch statements), error: patterns in switch statements are a preview feature and are disabled by default.
-            case GoldToken goldToken -> {
-                Tool tool = shed.getTool();
-                if (tool instanceof PickaxeToken) {
-                    tool.useWith(goldToken)
-                            .ifWorking(() -> {
-                                gold.gain(gold.amount() * ((PickaxeToken) tool).gainFactor());
-                            })
-                            .ifBroken(() -> {
-                                gold.gain(gold.amount());
-                                shed.dropTool();
-                            })
-                            .ifIdle(() -> {
-                                gold.gain(gold.amount());
-                            });
-                }
+        if (token instanceof GoldToken goldToken) {
+            Tool tool = shed.getTool();
+            if (tool instanceof PickaxeToken pickaxeToken) {
+                pickaxeToken.useWith(goldToken)
+                        .ifWorking(() -> {
+                            gold.gain(goldToken.amount() * pickaxeToken.gainFactor());
+                        })
+                        .ifBroken(() -> {
+                            gold.gain(goldToken.amount());
+                            shed.dropTool();
+                        })
+                        .ifIdle(() -> {
+                            gold.gain(goldToken.amount());
+                        });
+            } else {
+                gold.gain(goldToken.amount());
             }
-            case PickaxeToken pickaxeToken -> {
-                shed.add(pickaxeToken);
+        } else if (token instanceof PickaxeToken pickaxeToken) {
+            shed.add(pickaxeToken);
+        } else if (token instanceof AnvilToken anvilToken) {
+            if (shed.getTool() instanceof Repairable tool) {
+                tool.repair();
             }
-            case AnvilToken anvilToken -> {
-                if (shed.getTool() instanceof Repairable tool) {
-                    tool.repair();
-                }
-            }
-            default -> {}
         }
-    }
-}
-
-class Shed {
-    private Stack<Tool> tools;
-
-    public Shed () {
-        tools = new Stack<>();
-    }
-
-    public boolean isEmpty() {
-        return tools.isEmpty();
-    }
-
-    public void add(Tool tool) {
-        tools.push(tool);
-    }
-
-    public Tool getTool() {
-        if (tools.isEmpty()) {
-            return new NoTool();
-        } else {
-            return tools.peek();
-        }
-    }
-
-    public void dropTool() {
-        tools.pop();
-
     }
 }
